--- a/app/EaselJS-baseUse/index.html
+++ b/app/EaselJS-baseUse/index.html
@@ -23,6 +23,17 @@
     </style>
 </head>
 <body>
-	<canvas id="demoCanvas" width="300" height="300"></canvas>
+    <div>
+        <canvas id="myCanvas" width="300" height="300"></canvas>
+    </div>
+	<div>
+        <canvas id="myCanvas2" width="300" height="300"></canvas>
+    </div>
+    <div>
+        <canvas id="myCanvas3" width="300" height="300"></canvas>
+    </div>
+    <div>
+        <canvas id="myCanvas4" width="300" height="300"></canvas>
+    </div>
 </body>
 </html>
